--- a/views/contactus.html
+++ b/views/contactus.html
@@ -7,7 +7,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>contact us</title>
-    <link rel="stylesheet" href="/assets/css/_app.scss">
+    <link rel="stylesheet" href="/assets/css/app.scss">
     <script type="module" src="/assets/js/app.js"></script>
 </head>
 
