fix-assets-course

--- a/views/blog.html
+++ b/views/blog.html
@@ -85,7 +85,7 @@
                                             <div class="col-12">
                                                 <div class="guide">
                                                     <div class="thumbnail thumb-fit">
-                                                        <img src="/assets\img/cards/blog-banner.png" alt="thumb1">
+                                                        <img src="/assets/img/cards/blog-banner.png" alt="thumb1">
                                                         <div class="info top-right  no-gradient">
                                                             <div class="badge  with-shadow">
                                                                 <span class="title">مقالات</span>
@@ -260,12 +260,12 @@
                                 <div class="comments-and-answers">
                                     <div class="q-and-ans">
                                         <div class="comment">
-                                            <img class="avatar d-none d-sm-block" src="/assets\img\avatar\avatar-1.png"
+                                            <img class="avatar d-none d-sm-block" src="/assets/img/avatar/avatar-1.png"
                                                 alt="avatar-1">
                                             <div class="content">
                                                 <div class="header">
                                                     <img class="avatar d-block d-sm-none"
-                                                        src="/assets\img\avatar\avatar-1.png" alt="avatar-1">
+                                                        src="/assets/img/avatar/avatar-1.png" alt="avatar-1">
                                                     <div class="info w-100">
                                                         <div
                                                             class="d-flex align-items-center justify-content-between w-100">
@@ -289,11 +289,11 @@
                                         <div class="answer-wrapper">
                                             <div class="comment answer">
                                                 <img class="avatar d-none d-sm-block"
-                                                    src="/assets\img\avatar\avatar-2.png" alt="avatar-1">
+                                                    src="/assets/img/avatar/avatar-2.png" alt="avatar-1">
                                                 <div class="content">
                                                     <div class="header">
                                                         <img class="avatar d-block d-sm-none"
-                                                            src="/assets\img\avatar\avatar-1.png" alt="avatar-1">
+                                                            src="/assets/img/avatar/avatar-1.png" alt="avatar-1">
                                                         <div class="info w-100">
                                                             <div
                                                                 class="d-flex align-items-center justify-content-between w-100">
@@ -313,12 +313,12 @@
                                             </div>
                                         </div>
                                         <div class="comment">
-                                            <img class="avatar d-none d-sm-block" src="/assets\img\avatar\avatar-1.png"
+                                            <img class="avatar d-none d-sm-block" src="/assets/img/avatar/avatar-1.png"
                                                 alt="avatar-1">
                                             <div class="content">
                                                 <div class="header">
                                                     <img class="avatar d-block d-sm-none"
-                                                        src="/assets\img\avatar\avatar-1.png" alt="avatar-1">
+                                                        src="/assets/img/avatar/avatar-1.png" alt="avatar-1">
                                                     <div class="info w-100">
                                                         <div
                                                             class="d-flex align-items-center justify-content-between w-100">
@@ -342,11 +342,11 @@
                                         <div class="answer-wrapper">
                                             <div class="comment answer">
                                                 <img class="avatar d-none d-sm-block"
-                                                    src="/assets\img\avatar\avatar-1.png" alt="avatar-1">
+                                                    src="/assets/img/avatar/avatar-1.png" alt="avatar-1">
                                                 <div class="content">
                                                     <div class="header">
                                                         <img class="avatar d-block d-sm-none"
-                                                            src="/assets\img\avatar\avatar-1.png" alt="avatar-1">
+                                                            src="/assets/img/avatar/avatar-1.png" alt="avatar-1">
                                                         <div class="info w-100">
                                                             <div
                                                                 class="d-flex align-items-center justify-content-between w-100">
@@ -373,7 +373,7 @@
                                 <div class="card row-sm space not-hover gap-md br-sm">
                                     <div class="guide">
                                         <div class="thumbnail thumb-fit thumb-sm">
-                                            <img src="/assets\img\cards\author.png" alt="author">
+                                            <img src="/assets/img/cards/author.png" alt="author">
                                         </div>
                                     </div>
                                     <div class="content">
@@ -396,7 +396,7 @@
                                     <a href="" class="card row-sm space-no-space not-shadow-hover">
                                         <div class="guide">
                                             <div class="thumbnail thumb-fit thumb-xs">
-                                                <img src="/assets\img\thumbnail\small1.png" alt="thumb1">
+                                                <img src="/assets/img/thumbnail/small1.png" alt="thumb1">
                                             </div>
                                         </div>
                                         <div class="content">
@@ -409,7 +409,7 @@
                                     <a href="" class="card row-sm space-no-space not-shadow-hover">
                                         <div class="guide">
                                             <div class="thumbnail thumb-fit thumb-xs">
-                                                <img src="/assets\img\thumbnail\small2.png" alt="thumb1">
+                                                <img src="/assets/img/thumbnail/small2.png" alt="thumb1">
                                                 <div class="info"></div>
                                             </div>
                                         </div>
@@ -422,7 +422,7 @@
                                     <a href="" class="card row-sm space-no-space not-shadow-hover">
                                         <div class="guide">
                                             <div class="thumbnail thumb-fit thumb-xs">
-                                                <img src="/assets\img\thumbnail\small2.png" alt="thumb1">
+                                                <img src="/assets/img/thumbnail/small2.png" alt="thumb1">
                                                 <div class="info"></div>
                                             </div>
                                         </div>
@@ -488,7 +488,7 @@
                                                 <button class="btn white mt-xs text-secondary"
                                                     type="submit">ارسال</button>
                                                 <div class="wave-image">
-                                                    <img src="/assets\img\wave.png" alt="">
+                                                    <img src="/assets/img/wave.png" alt="">
                                                 </div>
                                             </div>
                                         </form>
