--- a/views/padcasts.html
+++ b/views/padcasts.html
@@ -160,7 +160,7 @@
                                             <div class="col-12 col-lg-5 align-items-center  d-flex">
                                                 <div class="guide h-100">
                                                     <div class="thumbnail h-100">
-                                                        <img src="/assets\img\thumbnail\logh.png" alt="thumb1">
+                                                        <img src="/assets/img/thumbnail/logh.png" alt="thumb1">
                                                         <div class="info top-right no-gradient">
                                                             <div class="badge sm">
                                                                 <i class="icon mn-microphone"></i>
@@ -196,7 +196,7 @@
                                             <div class="col-12 col-lg-5 align-items-center  d-flex">
                                                 <div class="guide h-100">
                                                     <div class="thumbnail h-100">
-                                                        <img src="/assets\img\thumbnail\logh.png" alt="thumb1">
+                                                        <img src="/assets/img/thumbnail/logh.png" alt="thumb1">
                                                         <div class="info top-right no-gradient">
                                                             <div class="badge sm">
                                                                 <i class="icon mn-microphone"></i>
@@ -232,7 +232,7 @@
                                             <div class="col-12 col-lg-5 align-items-center  d-flex">
                                                 <div class="guide h-100">
                                                     <div class="thumbnail h-100">
-                                                        <img src="/assets\img\thumbnail\logh.png" alt="thumb1">
+                                                        <img src="/assets/img/thumbnail/logh.png" alt="thumb1">
                                                         <div class="info top-right no-gradient">
                                                             <div class="badge sm">
                                                                 <i class="icon mn-microphone"></i>
@@ -318,7 +318,7 @@
                                                 <button class="btn white mt-xs text-secondary"
                                                     type="submit">ارسال</button>
                                                 <div class="wave-image">
-                                                    <img src="/assets\img\wave.png" alt="">
+                                                    <img src="/assets/img/wave.png" alt="">
                                                 </div>
                                             </div>
                                         </form>
