video-asset-build

--- a/views/video.html
+++ b/views/video.html
@@ -83,7 +83,7 @@
                                     <div class="video-js-wrapper">
                                         <video id="video-js" class="video-js" poster="/assets/img/video-poster.png"
                                             controls preload="auto" data-setup="{}">
-                                            <source src="/assets\videos\video12.mp4" type="video/webm" />
+                                            <source src="/assets/videos/video12.mp4" type="video/webm" />
                                             <p class="vjs-no-js">
                                                 To view this video please enable JavaScript, and consider upgrading to a
                                                 web browser that
