--- a/assets/css/components/list/_sm.scss
+++ b/assets/css/components/list/_sm.scss
@@ -1,9 +1,13 @@
 ul.list {
 
   &.gray {
+    li {
+      gap: 10px;
       .time {
-          margin-left: -26px;
-      }
+        margin-left: -26px;
+    }
+    }
+    
   }
 
 
