--- a/assets/css/pages/padcast/_sm.scss
+++ b/assets/css/pages/padcast/_sm.scss
@@ -8,5 +8,8 @@
     }
     .comments-section{
         margin-top: 48px;
+        .comments-and-answers{
+            margin-top: 32px;
+        }
     }
 }
