--- a/views/about.html
+++ b/views/about.html
@@ -7,7 +7,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>درباره ما</title>
-    <link rel="stylesheet" href="/assets/css/app.scss">
+    <link rel="stylesheet" href="/assets/css/_app.scss">
     <script type="module" src="/assets/js/app.js"></script>
 </head>
 
@@ -85,7 +85,7 @@
                                             <div class="col-12">
                                                 <div class="guide">
                                                     <div class="thumbnail thumb-fit">
-                                                        <img src="/assets/img/cards/blog-banner.png" alt="thumb1">
+                                                        <img src="/assets\img/cards/blog-banner.png" alt="thumb1">
                                                         <div class="info blue-gradient center-items">
                                                             <button class="play-modal-button btn transparent  d-block d-lg-none" data-jsc="modal#modal-about-me-video">
                                                                 <i class="icon mn-play-circle"></i>
@@ -122,12 +122,12 @@
 
                                             </div>
                                             <div class="img-wrapper">
-                                                <img src="/assets/img/about.png" alt="">
+                                                <img src="/assets\img\about.png" alt="">
                                                 <div class="overlay">
 
                                                 </div>
                                             </div>
-                                            <img class="wave" src="/assets/img/wave.png" alt="">
+                                            <img class="wave" src="/assets\img\wave.png" alt="">
                                             <button class="play-modal-button" data-jsc="modal#modal-about-me-video">
                                                 <i class="icon mn-play-circle"></i>
                                             </button>
@@ -222,7 +222,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-12 col-lg-6">
                                     <div class="image-frame" data-jsc="modal#modal-about-me-gallery1">
-                                        <img src="/assets/img/g2.png" alt="">
+                                        <img src="/assets\img\g2.png" alt="">
                                     </div>
                                     <div class="modal gallery-modal" id="modal-about-me-gallery1">
                                         <div class="close-modal">
@@ -231,7 +231,7 @@
                                         <div class="card h-fit">
                                             <div class="guide">
                                                 <div class="thumbnail">
-                                                    <img src="/assets/img/g2.png" alt="">
+                                                    <img src="/assets\img\g2.png" alt="">
                                                 </div>
                                             </div>
                                         </div>
@@ -239,7 +239,7 @@
                                 </div>
                                 <div class="col-12 col-lg-6">
                                     <div class="image-frame" data-jsc="modal#modal-about-me-gallery2">
-                                        <img src="/assets/img/g3.png" alt="">
+                                        <img src="/assets\img\g3.png" alt="">
                                     </div>
                                     <div class="modal gallery-modal" id="modal-about-me-gallery2">
                                         <div class="close-modal">
@@ -248,7 +248,7 @@
                                         <div class="card h-fit">
                                             <div class="guide">
                                                 <div class="thumbnail">
-                                                    <img src="/assets/img/g3.png" alt="">
+                                                    <img src="/assets\img\g3.png" alt="">
                                                 </div>
                                             </div>
                                         </div>
@@ -293,7 +293,7 @@
                                                 <button class="btn white mt-xs text-secondary"
                                                     type="submit">ارسال</button>
                                                 <div class="wave-image">
-                                                    <img src="/assets/img/wave.png" alt="">
+                                                    <img src="/assets\img\wave.png" alt="">
                                                 </div>
                                             </div>
                                         </form>
@@ -422,7 +422,7 @@
                 <div class="aboutme-modal-content">
                     <div class="video-js-wrapper">
                         <video id="video-js" class="video-js vjs-16-9" controls preload="auto" data-setup="{}">
-                            <source src="/assets/videos/video1.mp4" type="video/mp4" />
+                            <source src="/assets\videos\video1.mp4" type="video/mp4" />
                             <p class="vjs-no-js">
                                 To view this video please enable JavaScript, and consider upgrading to a
                                 web browser that
