--- a/views/contactus.html
+++ b/views/contactus.html
@@ -7,7 +7,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>contact us</title>
-    <link rel="stylesheet" href="/assets/css/app.scss">
+    <link rel="stylesheet" href="/assets/css/_app.scss">
     <script type="module" src="/assets/js/app.js"></script>
 </head>
 
@@ -131,14 +131,13 @@
                                                                     </span>
                                                                 </div>
                                                                 <div class="content space-sm">
-                                                                    <ul class="list gap-xs">
+                                                                    <ul class="list list-sm-row gap-xs">
                                                                         <a href="#">
                                                                             <li>
                                                                                 <div
                                                                                     class="badge badge-white md  icon-primary badge-shadow">
                                                                                     <i class="icon mn-instagram"></i>
-                                                                                    <span
-                                                                                        class="title">اینستاگرام</span>
+                                                                                    <span class="title d-none d-sm-inline">اینستاگرام</span>
                                                                                 </div>
                                                                             </li>
                                                                         </a>
@@ -147,8 +146,7 @@
                                                                                 <div
                                                                                     class="badge badge-white md  icon-primary badge-shadow">
                                                                                     <i class="icon mn-aparat"></i>
-                                                                                    <span class="title">صفحه
-                                                                                        آپارات</span>
+                                                                                    <span class="title d-none d-sm-inline">صفحه آپارات</span>
                                                                                 </div>
                                                                             </li>
                                                                         </a>
@@ -157,8 +155,7 @@
                                                                                 <div
                                                                                     class="badge badge-white md  icon-primary badge-shadow">
                                                                                     <i class="icon mn-youtube"></i>
-                                                                                    <span class="title">صفحه
-                                                                                        یوتیوب</span>
+                                                                                    <span class="title d-none d-sm-inline">صفحه یوتیوب</span>
                                                                                 </div>
                                                                             </li>
                                                                         </a>
@@ -226,7 +223,7 @@
                                                 <button class="btn white mt-xs text-secondary"
                                                     type="submit">ارسال</button>
                                                 <div class="wave-image">
-                                                    <img src="/assets/img/wave.png" alt="">
+                                                    <img src="/assets\img\wave.png" alt="">
                                                 </div>
                                             </div>
                                         </form>
