--- a/assets/css/components/card/_sm.scss
+++ b/assets/css/components/card/_sm.scss
@@ -5,9 +5,6 @@
         }
     
     }
-
-
-
     &.card-float {
         overflow: visible;
         .guide {
@@ -68,5 +65,20 @@
             margin-top: 18px;
             margin-bottom: 8px;
         }
+    }
+}
+.card-video {
+    gap: 14px;
+    padding: 12px;
+
+
+    .footer {
+        padding: 12px;
+        gap: 12px;
+
+        .text {
+            gap: 12px;
+        }
+
     }
 }
