--- a/assets/css/components/modal/_base.scss
+++ b/assets/css/components/modal/_base.scss
@@ -4,12 +4,14 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 100000;
+  z-index: 100;
   display: none;
   overflow-x: hidden;
   overflow-y: auto;
   align-items: center;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background: rgba(42, 53, 84, 0.9);
   padding: 60px 0;
   > *{
@@ -32,7 +34,7 @@
   .close-modal{
     display: flex;
     justify-content: center;
-    padding-bottom: 60px;
+    padding-bottom: 18px;
     .close-modal-btn{
       padding: 0;
       .icon{
