--- a/assets/css/pages/about/_sm.scss
+++ b/assets/css/pages/about/_sm.scss
@@ -18,7 +18,7 @@
 .start-adventure {
     margin-top: 48px;
     .description {
-        margin-top: 8px;
+        margin-top: 20px;
     }
     .achivments {
         margin-top: 32px;
@@ -27,6 +27,6 @@
 .gallery {
     margin-top:80px;
     .section-header {
-        margin-bottom:0;
+        margin-bottom:10px;
     }
 }
