--- a/assets/css/pages/blogs/_sm.scss
+++ b/assets/css/pages/blogs/_sm.scss
@@ -3,12 +3,13 @@
     .card-row {
         .content {
             .title {
-                font-size: 32px;
+                // font-size: 32px;
+                margin-top: 12px;
             }
 
             .text {
                 .description {
-                    font-size: 16px;
+                    // font-size: 16px;
                 }
             }
         }
