--- a/assets/css/pages/course/_sm.scss
+++ b/assets/css/pages/course/_sm.scss
@@ -1,14 +1,12 @@
 .course-header-container {
     margin: 0;
+header{
     .course-header {
-        .row {
-            --bs-gutter-y: 16px;
-        }
+        margin-bottom: 42px;
 
         .right-section {
             .box {
                 padding-top: 0;
-
                 .main {
                     .text {
                         margin-top: 0;
@@ -33,22 +31,9 @@
         }
     }
 }
-
-.card-video {
-    gap: 14px;
-    padding: 12px;
-
-
-    .footer {
-        padding: 12px;
-        gap: 12px;
-
-        .text {
-            gap: 12px;
-        }
-
-    }
 }
+
+
 section.course-teacher {
     margin-top: 80px;
     margin-bottom: 42px;
