--- a/views/courses.html
+++ b/views/courses.html
@@ -7,7 +7,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title> courses-archive </title>
-    <link rel="stylesheet" href="/assets/css/app.scss">
+    <link rel="stylesheet" href="/assets/css/_app.scss">
     <script type="module" src="/assets/js/app.js"></script>
 </head>
 
@@ -347,7 +347,7 @@
                                                 <button class="btn white mt-xs text-secondary"
                                                     type="submit">ارسال</button>
                                                 <div class="wave-image">
-                                                    <img src="/assets/img/wave.png" alt="">
+                                                    <img src="/assets\img\wave.png" alt="">
                                                 </div>
                                             </div>
                                         </form>
